# Docker-FastAPI

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
database/: database.py
model/: User.py
routes/: UserRouter.py  __init__.py
schemas/: UserSchema.py  __init__.py
services/: UserService.py
